Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15092

Fix logic for unaligned transfer with o2iblnd

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      It's possible for there to be an offset for the first page of a
      transfer. However, there are two bugs with this code in o2iblnd.

      The first is that this use-case will require LNET_MAX_IOV + 1 local
      RDMA fragments, but we do not specify the correct corresponding values
      for the max page list to ib_alloc_fast_reg_page_list(),
      ib_alloc_fast_reg_mr(), etc.

      The second issue is that the logic in kiblnd_setup_rd_iov() and
      kiblnd_setup_rd_kiov() attempts to obtain one more scatterlist entry
      than is actually needed. This causes the transfer to fail with -EFAULT.

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: